finishing ui for sign up and sign in page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
-* {
-    overflow:hidden;
-}
-
+ * {
+  scrollbar-width: thin;
+  
+ }
 
 @layer base {
   :root {
